--- a/src/main/resources/exceptions.properties
+++ b/src/main/resources/exceptions.properties
@@ -5,3 +5,4 @@ login.erro=Erro ao tentar fazer login
 login.sucesso=Sucesso ao Login
 login.acento=\u00e9 uma frase com a\u00e7\u00e3o
 nome.invalido=O nome do usu\u00e1rio n\u00e3o existe
+erro.desconhecido=Erro desconhecido
