--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <version.spring>4.2.6.RELEASE</version.spring>
         <version.hamcrest>1.3</version.hamcrest>
         <version.aspectj>1.8.9</version.aspectj>
+        <version.easymock>3.4</version.easymock>
     </properties>
     <dependencies>
         
@@ -63,7 +64,7 @@
         <dependency>
             <groupId>org.easymock</groupId>
             <artifactId>easymock</artifactId>
-            <version>3.4</version>
+            <version>${version.easymock}</version>
             <scope>test</scope>
         </dependency>
         
