--- a/pom.xml
+++ b/pom.xml
@@ -51,14 +51,14 @@
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-core</artifactId>
             <version>${version.hamcrest}</version>
-            <scope>test</scope>
+            <scope>compile</scope>
         </dependency>
         
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-library</artifactId>
             <version>${version.hamcrest}</version>
-            <scope>test</scope>
+            <scope>compile</scope>
         </dependency>
         
         <dependency>
@@ -168,6 +168,12 @@
             <groupId>cglib</groupId>
             <artifactId>cglib</artifactId>
             <version>2.2.2</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>com.lordofthejars</groupId>
+            <artifactId>bool</artifactId>
+            <version>0.9.0</version>
         </dependency>
         
     </dependencies>
