--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     compile group: 'javax.validation', name: 'validation-api', version:'1.1.0.Final'
     compile group: 'org.hibernate', name: 'hibernate-validator', version:'5.2.4.Final'
     compile group: 'javax.enterprise', name: 'cdi-api', version:'1.2'
+    compile group: 'joda-time', name: 'joda-time', version:'2.9.4'
     compile group: 'javax.inject', name: 'javax.inject', version:'1'
     compile group: 'org.hamcrest', name: 'hamcrest-core', version:'1.3'
     compile group: 'org.hamcrest', name: 'hamcrest-library', version:'1.3'
