Apenas um apontamento em aberto por job

--- a/src/main/resources/exceptions.properties
+++ b/src/main/resources/exceptions.properties
@@ -3,3 +3,4 @@ login.sucesso=Sucesso ao Login
 login.acento=\u00e9 uma frase com a\u00e7\u00e3o
 nome.invalido=O nome do usu\u00e1rio n\u00e3o existe
 erro.desconhecido=Erro desconhecido
+erro.generico=Ocorreu um erro na camada de servi\u00E7o. Melhore essa mensagem
