Custom validator default foi renomeado para o nome final Revisão da estrutura de excptions Teste de inserção de rage duplicado de apontamento

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,2 +1,3 @@
 core.com.spring.test.constraint.checkcase=O texto deve estar em mai\u00fasculo
 core.com.spring.test.constraint.anofabricacao=O ano de fabricacao deve ser maior que o ano modelo
+core.com.spring.test.constraint.apontamento.inicio.maior.fim=In\u00EDcio deve ser maior que o final
