--- a/src/main/resources/exceptions.properties
+++ b/src/main/resources/exceptions.properties
@@ -4,3 +4,8 @@ login.acento=\u00e9 uma frase com a\u00e7\u00e3o
 nome.invalido=O nome do usu\u00e1rio n\u00e3o existe
 erro.desconhecido=Erro desconhecido
 erro.generico=Ocorreu um erro na camada de servi\u00E7o. Melhore essa mensagem
+erro.obter.apontamento=Erro ao obter novo apontamento
+erro.parar.apontamento=Erro ao parar apontamento
+erro.parar.ja.existe.range=O per\u00EDodo informado de in\u00EDcio e fim j\u00E1 existe em outro apontamento
+erro.entidade.nao.pode.ser.nula= A entidade n\u00E3o pode ser nula
+erro.id.entidade.nao.pode.ser.nulo=O id da entidade n\u00E3o pode ser nulo
