--- a/pom.xml
+++ b/pom.xml
@@ -143,9 +143,16 @@
 		</dependency>
 
 		<dependency>
+			<groupId>javax.transaction</groupId>
+			<artifactId>javax.transaction-api</artifactId>
+			<version>1.2</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>4.3.2.Final</version>
+			<version>5.1.0.Final</version>
 			<scope>test</scope>
 		</dependency>
 
