--- a/pom.xml
+++ b/pom.xml
@@ -198,5 +198,11 @@
 			</exclusions>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>19.0</version>
+		</dependency>
+		
 	</dependencies>
 </project>
