--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ repositories {
      mavenCentral()
 }
 dependencies {
+	compile group: 'com.google.guava', name: 'guava', version: '19.0'
     compile group: 'javax.validation', name: 'validation-api', version:'1.1.0.Final'
     compile group: 'org.hibernate', name: 'hibernate-validator', version:'5.2.4.Final'
     compile group: 'javax.enterprise', name: 'cdi-api', version:'1.2'
