--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<version.hamcrest>1.3</version.hamcrest>
 		<version.aspectj>1.8.9</version.aspectj>
 		<version.easymock>3.4</version.easymock>
+		<cxf.version>2.7.11.redhat-3</cxf.version>
 	</properties>
 	<dependencies>
 
@@ -196,6 +197,26 @@
 					<groupId>org.hamcrest</groupId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		
+				<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-frontend-jaxws</artifactId>
+			<scope>provided</scope>
+			<version>${cxf.version}</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>asm</artifactId>
+					<groupId>asm</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-transports-http</artifactId>
+			<scope>provided</scope>
+			<version>${cxf.version}</version>
 		</dependency>
 
 	</dependencies>
