--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,10 @@ apply plugin: 'maven'
 group = 'core.com'
 version = '1.0-SNAPSHOT'
 
-description = """"""
+description = "Projetos de Teste"
 
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 
 
@@ -46,15 +46,12 @@ dependencies {
     testCompile(group: 'junit', name: 'junit', version:'4.12') {
       exclude(module: 'hamcrest-core')
     }
+
     testCompile group: 'org.easymock', name: 'easymock', version:'3.4'
     testCompile group: 'org.springframework', name: 'spring-test', version:'4.2.6.RELEASE'
     testCompile group: 'com.jayway.jsonpath', name: 'json-path', version:'2.2.0'
     testCompile group: 'org.hibernate', name: 'hibernate-entitymanager', version:'4.3.2.Final'
     testCompile group: 'org.jboss', name: 'jandex', version:'1.2.2.Final'
     testCompile group: 'com.h2database', name: 'h2', version:'1.4.191'
-    compile(group: 'javax.servlet', name: 'javax.servlet-api', version:'3.0.1') {
-       /* This dependency was originally in the Maven provided scope, but the project was not of type war.
-       This behavior is not yet supported by Gradle, so this dependency has been converted to a compile dependency.
-       Please review and delete this closure when resolved. */
-    }
+    testCompile group: 'javax.servlet', name: 'javax.servlet-api', version:'3.0.1'
 }
