--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<version.aspectj>1.8.9</version.aspectj>
 		<version.easymock>3.4</version.easymock>
 		<cxf.version>2.7.11.redhat-3</cxf.version>
+		<version.mockito>1.10.19</version.mockito>
 	</properties>
 	<dependencies>
 
@@ -45,6 +46,20 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<artifactId>hamcrest-core</artifactId>
+					<groupId>org.hamcrest</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>${version.mockito}</version>
 			<scope>test</scope>
 			<exclusions>
 				<exclusion>
