--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,6 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 
-
 repositories {
      mavenLocal()
      mavenCentral()
@@ -43,6 +42,10 @@ dependencies {
       exclude(module: 'asm')
     }
     
+    compile(group: 'org.mockito', name: 'mockito-core', version: '1.10.19') {
+      exclude(module: 'org.hamcrest')
+    }
+
     testCompile(group: 'junit', name: 'junit', version:'4.12') {
       exclude(module: 'hamcrest-core')
     }
