--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 		<version.hamcrest>1.3</version.hamcrest>
 		<version.aspectj>1.8.9</version.aspectj>
 		<version.easymock>3.4</version.easymock>
-		<cxf.version>2.7.11.redhat-3</cxf.version>
+		<cxf.version>2.7.9</cxf.version>
 		<version.mockito>1.10.19</version.mockito>
 	</properties>
 	<dependencies>
