--- a/build.gradle
+++ b/build.gradle
@@ -46,8 +46,7 @@ dependencies {
     compile(group: 'org.apache.cxf', name: 'cxf-rt-frontend-jaxws', version:'2.7.11.redhat-3') {
       exclude(module: 'asm')
     }
-    
-    
+    compile group: 'org.apache.commons', name: 'commons-lang3', version:'3.4'
 
     testCompile(group: 'junit', name: 'junit', version:'4.12') {
       exclude(module: 'hamcrest-core')
