--- a/pom.xml
+++ b/pom.xml
@@ -274,4 +274,15 @@
 		</dependency>
 
 	</dependencies>
+
+	<build>
+		<finalName>${project.artifactId}</finalName>
+		<plugins>
+			<plugin>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.6</version>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
